--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,13 @@ services:
   server:
     build:
       context: .
-    # FIXME set ports
     ports:
       - 8080:8080
-      - 8888:8888
+      - 3000:3000
     environment:
       HOST: 0.0.0.0
-      HTTP_PORT: 8080
-    restart: always
+      WEBSOCKET_PORT: 8080
+      HTTP_PORT: 3000
+      AUTHENTICATION_PLUGIN: EnvironmentVariableAuthenticationPlugin
+      DEVICE_KEYS:
+    restart: unless-stopped
