--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
+		"cors": "^2.8.5",
 		"dotenv": "^8.0.0",
 		"express": "^4.17.1",
 		"mysql": "^2.17.1",
