--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
+		"body-parser": "^1.20.2",
 		"cors": "^2.8.5",
-		"dotenv": "^8.0.0",
-		"express": "^4.17.1",
-		"mysql": "^2.17.1",
-		"ws": "^7.1.1"
+		"dotenv": "^16.4.5",
+		"express": "^4.19.2",
+		"mysql": "^2.18.1",
+		"ws": "^8.17.1"
 	},
 	"devDependencies": {
-		"@types/dotenv": "^6.1.1",
-		"@types/express": "^4.17.0",
-		"@types/mysql": "^2.15.6",
-		"@types/node": "^10.14.13",
-		"@types/ws": "^6.0.1",
-		"typescript": "^3.5.3"
+		"@types/body-parser": "^1.19.5",
+		"@types/cors": "^2.8.17",
+		"@types/express": "^4.17.21",
+		"@types/mysql": "^2.15.26",
+		"@types/node": "^20.14.8",
+		"@types/ws": "^8.5.10",
+		"typescript": "^5.5.2"
 	}
 }
