--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
 	"compilerOptions": {
 		"target": "es5",
+		"module": "Node16",
+		"moduleResolution": "Node16",
 		"noImplicitReturns": true,
 		"noEmitOnError": true,
 		"outDir": "js/",
 		"sourceMap": true,
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"allowSyntheticDefaultImports": true,
 	},
 	"include": [
 		"src/**/*"
