--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"mysql": "^2.18.1",
+		"pino": "^9.2.0",
+		"pino-http": "^10.1.0",
 		"ws": "^8.17.1"
 	},
 	"devDependencies": {
