--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"license": "GPL-3.0",
 	"description": "OpenThings request forwarding server",
 	"scripts": {
-		"compile": "node build.mjs",
+		"build": "node build.mjs",
 		"start": "node dist/index.cjs",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
