--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
+		"body-parser": "^1.20.2",
 		"cors": "^2.8.5",
 		"dotenv": "^8.0.0",
 		"express": "^4.17.1",
