update dockerfile and renamed js/ to dist/

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"description": "OpenThings request forwarding server",
 	"scripts": {
 		"compile": "tsc",
-		"start": "node js/server.js",
+		"start": "node dist/server.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
