--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 		"target": "es5",
 		"noImplicitReturns": true,
 		"noEmitOnError": true,
-		"outDir": "js/",
+		"outDir": "dist/",
 		"sourceMap": true,
 		"skipLibCheck": true
 	},
