--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.6"
 services:
   server:
-    image: docker pull ghcr.io/openthingsio/openthings-framework-request-proxy:release
+    image: ghcr.io/openthingsio/openthings-framework-request-proxy:release
     ports:
       - 8080:8080
       - 3000:3000
