--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -82,6 +82,6 @@ jobs:
           platforms: ${{ github.event_name == 'pull_request' && 'linux/amd64' || 'linux/amd64,linux/arm64' }}
           # Skip pushing when PR from a fork
           push: ${{ !github.event.pull_request.head.repo.fork }}
-          cache-from: type=registry,ref=ghcr.io/${{ steps.lower-owner.outputs.owner }}/openthings-build-cache:openthings
+          cache-from: type=registry,ref=ghcr.io/${{ steps.lower-owner.outputs.owner }}/openthings-build-cache:proxy
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
